--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,12 +30,13 @@ jobs:
           static_site_generator: next
 
       - name: Build with Next.js 🏗️
+        working-directory: my-portfolio
         run: npx next build
 
       - name: Upload artifact 📡
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./out
+          path: my-portfolio/out
 
   deploy:
     environment:
